@@ -570,7 +570,6 @@
     "*://*.stylist.co.uk/*",
     "*://*.sudinfo.be/*",
     "*://*.sudouest.fr/*",
-    "*://*.sueddeutsche.de/*",
     "*://*.sun-sentinel.com/*",
     "*://*.suomensotilas.fi/*",
     "*://*.svz.de/*",
