@@ -3,6 +3,7 @@ Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
 Remove (custom) Substack (fix obsolete)
+Remove Sueddeutsche Zeitung (fix obsolete)
 Fix Citywire
 Fix DN.no
 Fix Gruppo SAE.it (free articles only)
